add inventory support
